[gd_scene load_steps=14 format=3 uid="uid://capuex3nwk3gg"]

[ext_resource type="Script" path="res://CONTROLER_3D/Game_N3D.gd" id="1_4u3n1"]
[ext_resource type="PackedScene" uid="uid://btvcihrgnk844" path="res://OBJs/Obj_Cadena.tscn" id="2_5wlhy"]
[ext_resource type="PackedScene" uid="uid://dxrramj5n20p6" path="res://OBJs/obj_ascen0.tscn" id="2_ot0ej"]
[ext_resource type="PackedScene" uid="uid://bqsevo8h2shwj" path="res://LVS/lv_exterior.tscn" id="3_dhrk5"]
[ext_resource type="PackedScene" uid="uid://dgdoddtmj4715" path="res://PJS/PJ.tscn" id="3_jhyhk"]
[ext_resource type="Script" path="res://CONTROLER_3D/CamCont_N3D.gd" id="3_rl13t"]
[ext_resource type="Script" path="res://CONTROLER_3D/UI.gd" id="5_s10d4"]
[ext_resource type="PackedScene" uid="uid://crmhynskkg50n" path="res://BLENDER/Puerta.tscn" id="6_03pwe"]

[sub_resource type="Environment" id="Environment_rlhv3"]
ambient_light_source = 1
ambient_light_color = Color(0.933333, 0.564706, 0.752941, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qiw1m"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pjqrw"]
albedo_color = Color(0.835294, 0, 0.835294, 1)
emission_enabled = true
emission = Color(0.745098, 0, 0.745098, 1)

[sub_resource type="BoxMesh" id="BoxMesh_nrpp8"]

[sub_resource type="Theme" id="Theme_kfkt8"]
default_font_size = 12

[node name="Game_N3D" type="Node3D"]
script = ExtResource("1_4u3n1")

[node name="obj_ascen0" parent="." instance=ExtResource("2_ot0ej")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 49.9507, 61.766, -7.9473)

[node name="obj_pj" parent="." instance=ExtResource("3_jhyhk")]
transform = Transform3D(0.09, 0, 0, 0, 0.09, 0, 0, 0, 0.09, 48.6982, 64.2636, -1.75141)

[node name="obj_cadena" parent="." instance=ExtResource("2_5wlhy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 47.49, 65.6514, -6.25588)

[node name="lv_exterior" parent="." instance=ExtResource("3_dhrk5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40.6128, 62.5522, -3.71514)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_rlhv3")

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.535046, 0.844823, 0, -0.844823, -0.535046, 1136.54, 893.154, -457.624)
light_color = Color(0.74902, 0.890196, 1, 1)
light_energy = 1.66
light_indirect_energy = 0.245
light_volumetric_fog_energy = 1.985
light_angular_distance = 7.15
shadow_normal_bias = 0.387
editor_only = true
directional_shadow_mode = 0
directional_shadow_fade_start = 0.035
directional_shadow_max_distance = 39.3
directional_shadow_pancake_size = 8.6

[node name="camcont_n3d" type="Node3D" parent="." groups=["GRP_PJ1"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 47.2453, 64.5167, -4.62654)
script = ExtResource("3_rl13t")

[node name="spring_arm3d" type="SpringArm3D" parent="camcont_n3d"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00254822, 0.368629, -0.371823)
collision_mask = 3
shape = SubResource("CapsuleShape3D_qiw1m")
spring_length = 0.0
margin = 1.0

[node name="camera_cam3d" type="Camera3D" parent="camcont_n3d/spring_arm3d" groups=["GRP_PJ1"]]
transform = Transform3D(1, 0, 0, 0, 0.971961, 0.235142, 0, -0.235142, 0.971961, 0.0051384, 0.127426, 0.0651898)
near = 0.001
far = 368.6

[node name="loockat_n3d" type="Node3D" parent="camcont_n3d" groups=["GRP_PJ1"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.41)

[node name="Msh3D_Cubo4" type="MeshInstance3D" parent="camcont_n3d/loockat_n3d"]
transform = Transform3D(-0.121161, -0.0765142, 0.107269, 0, 0.145727, 0.103946, -0.131761, 0.0703584, -0.0986389, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_pjqrw")
cast_shadow = 0
mesh = SubResource("BoxMesh_nrpp8")

[node name="StaticBody3D" type="StaticBody3D" parent="camcont_n3d/loockat_n3d/Msh3D_Cubo4"]
transform = Transform3D(1, 0, -9.31323e-10, 0, 1, 0, 0, 0, 1, 0, 0, 0)
collision_layer = 0
collision_mask = 0

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 679.0
offset_bottom = 304.0
script = ExtResource("5_s10d4")

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_kfkt8")

[node name="RotCam_lb" type="Label" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "UI Texto"

[node name="RotPj_lb" type="Label" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "UI Texto"

[node name="PosPj_lb" type="Label" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "UI Texto"

[node name="PosPj1_lb" type="Label" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "UI Texto"

[node name="PosPj2_lb" type="Label" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 8
text = "UI Texto"

[node name="PosPj3_lb" type="Label" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "UI Texto"

[node name="PosPj4_lb" type="Label" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "UI Texto"

[node name="Puerta" parent="." instance=ExtResource("6_03pwe")]
transform = Transform3D(-0.000450305, 0, -0.86, 0, 0.86, 0, 0.86, 0, -0.000450305, 21.9742, 79.4871, 3.06362)
